--- a/SocialLinksProfile.html
+++ b/SocialLinksProfile.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="Images/profileicon.PNG" width="80px" alt="">
+        <img src="Images/profileicon.png" width="80px" alt="">
             <h2>Salma Essam</h2>
             <span>Hurghada, Red Sea, Egypt</span>
             <p>"Front-End Developer"</p>
